apps/uptime-kuma/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: uptime-kuma
  namespace: apps
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`status.ramoneees.com`)
      kind: Rule
      services:
        - name: uptime-kuma
          port: 3001
  tls:
    secretName: wildcard-ramoneees-com-tls
